# ADS-1

./: CMakeLists.txt
.github/workflows/: cpplint.yml  release.yml
src/: alg.cpp
test/: CMakeLists.txt  tests.cpp
